*SVN*

* Make create! on a has_many :through association return the association object.  Not the collection.  Closes #8786 [lifofifo]

* Move from select * to select tablename.* to avoid clobbering IDs. Closes #8889 [dasil003]

* Don't call unsupported methods on associated objects when using :include, :method with to_xml #7307, [manfred, jwilger]

* Define collection singular ids method for has_many :through associations.  #8763 [lifofifo]

* Array attribute conditions work with proxied association collections.  #8318 [kamal, theamazingrando]

* Fix polymorphic has_one associations declared in an abstract class.  #8638 [lifofifo, daxhuiberts]

* Fixed validates_associated should not stop on the first error #4276 [mrj/manfred/josh]

* Rollback if commit raises an exception.  #8642 [kik, Jeremy Kemper]

* Update tests' use of fixtures for the new collections api.  #8726 [kamal]

* Save associated records only if the association is already loaded.  #8713 [blaine]

* MySQL: fix show_variable.  #8448 [matt, Jeremy Kemper]

* Fixtures: correctly delete and insert fixtures in a single transaction.  #8553 [Michael Schuerig]

* Fixtures: people(:technomancy, :josh) returns both fixtures.  #7880 [technomancy, Josh Peek]

* Calculations support non-numeric foreign keys.  #8154 [kamal]

* with_scope is protected.  #8524 [Josh Peek]

* Quickref for association methods.  #7723 [marclove, Mindsweeper]

* Calculations: return nil average instead of 0 when there are no rows to average.  #8298 [davidw]

* acts_as_nested_set: direct_children is sorted correctly.  #4761 [Josh Peek, rails@33lc0.net]

* Raise an exception if both attr_protected and attr_accessible are declared.  #8507 [stellsmi]

* SQLite, MySQL, PostgreSQL, Oracle: quote column names in column migration SQL statements.  #8466 [marclove, lorenjohnson]

* Allow nil serialized attributes with a set class constraint.  #7293 [sandofsky]

* Oracle: support binary fixtures.  #7987 [Michael Schoen]
